* CHANGES IN dplR VERSION 1.5.5

File: rwi.stats.running.R
-----------------

- Added prewhitening option to rwi.stats.running() and by extension rwi.stats().
  There are two new arguments prewhiten and n that are passed to normalize1()
  as in the xdating functions e.g., corr.rwl.seg(). Help file changed.

Files: corr.rwl.seg.R, seg.plot.R, rwl.stats.R, spag.plot.R
-----------------------------------------------------------

- Support for input of length 1

File: corr.rwl.seg.R
--------------------

- Fixed 'ylim' in plot()
- Fixed "no guides" case
- stops with a clear error message if 'rwl' has too few rows for the given
  'seg.length' and 'bin.floor' combination

File: rcs.R
-----------

- Graceful handling of empty input

File: read.compact.R
--------------------

- Pretty printing of summary output, no more ragged lines

File: read.fh.R
---------------

- Pretty printing of summary output, no more ragged lines
- More robust detection of block and single column data representations
- Data block, when using block representation, is interpreted as fixed
  width fields (10*6)). Reference: TRiCYCLE Users Manual, Version 0.2.6.
- Different units are supported. Default is 1/100 mm.
- Each data block is mapped to the correct header block. Previously, there
  was a risk of using the wrong header if the file contained data in
  formats other than "Tree" or "Single". Also, the end position
  of any data block could be off if data with different formats was
  present in the file. Presumably the function would have failed with an
  obscure error message.
- Added support for site, tree, core, etc. metadata. Results are given as
  an attribute of the return value, named "ids".
- Added support for MissingRingsBefore (pith offset) metadata. Results are
  given as an attribute named "po".

File: read.tucson.R
-------------------

- Fixed trimming of all-NA rows
- Fixed a bug that could crash R if the fided-width columns of the input