@@ -1,7 +1,12 @@
 * CHANGES IN dplR VERSION 1.5.5
 
-File: rwi.stats.running.R
+Various .R files:
 -----------------
+
+- Use 'nzchar(x)' instead of 'nchar(x) > 0'
+
+File: rwi.stats.running.R
+-------------------------
 
 - Added prewhitening option to rwi.stats.running() and by extension rwi.stats().
   There are two new arguments prewhiten and n that are passed to normalize1()
